# snapmail-cli

./: Cargo.toml  DESIGN.md  README.md
crates/common/: Cargo.toml
crates/common/src/: attachment.rs  conductor.rs  config.rs  globals.rs  holochain.rs  lib.rs  utils.rs  wasm.rs
crates/rustify-wasm/: Cargo.toml
crates/rustify-wasm/src/: main.rs
crates/snapmail-cli/: Cargo.toml
crates/snapmail-cli/src/: cli.rs  main.rs
crates/snapmail-cli/src/subcommands/: chain.rs  change.rs  clear.rs  listen.rs  mod.rs  open.rs  send.rs  setup.rs
crates/snapmail-tui/: Cargo.toml
crates/snapmail-tui/src/: app.rs  listen_signal.rs  main-tui.rs  menu.rs  mod.rs  run.rs  snapmail_chain.rs
crates/snapmail-tui/src/render/: draw.rs  render_settings.rs  render_view.rs  render_write.rs
crates/snapmail-tui/src/tables/: attachments.rs  contacts.rs  mail.rs
scripts/: launch_test.bat  launch_test_file.bat  rustify.bat  set-holochain-rev.sh  setup.bat
src/: attachment.rs  cli.rs  conductor.rs  error.rs  globals.rs  holochain.rs  main-tui.rs  main.rs  rustify-wasm.rs  snapmail_api.rs  utils.rs  wasm.rs
src/subcommands/: change.rs  clear.rs  config.rs  listen.rs  mod.rs  open.rs  send.rs  setup.rs
src/tui2/: app.rs  contacts.rs  draw.rs  listen_signal.rs  mail.rs  menu.rs  mod.rs  run.rs  snapmail_chain.rs
src/tui2/render/: draw.rs  mod.rs  render_settings.rs  render_view.rs  render_write.rs
src/tui2/tables/: attachments.rs  mail.rs  mod.rs
