[workspace]

members = [
    "crates/common",
    "crates/rustify-wasm",
    "crates/snapmail-cli",
    "crates/snapmail-tui",
]
resolver="2"

#[patch.crates-io]
#rkv = { git = "https://github.com/holochain/rkv.git", branch = "master" }
#lmdb-rkv = { git = "https://github.com/holochain/lmdb-rs.git" }

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true # link time optimization

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
