[workspace]
resolver="2"
members = [
    "crates/common",
    "crates/rustify-wasm",
    "crates/snapmail-cli",
    "crates/snapmail-tui",
]

[profile.dev]
debug = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true # link time optimization

# Optimize deps even in Dev
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
