[workspace]
resolver="2"
members = [
    "crates/common",
    "crates/rustify-wasm",
    #"crates/snapmail-cli",
    #"crates/snapmail-tui",
]

[workspace.package]
version = "0.1.0-hdk-3.1"
rust-version = "1.75.0"
edition = "2021"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]

[workspace.dependencies]
serde = { version = "=1.0.197", default-features = false }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
anyhow = "1.0"
strum = "0.19"
strum_macros = "0.19"
tokio = { version = "1.11", features = [ "full" ] }


holochain = { version = "=0.3.1" }
holochain_util = { version = "0.3.1" }
holo_hash = { version = "=0.3.1" }
holochain_keystore = { version = "=0.3.1" }
holochain_zome_types = { version = "=0.3.1" }
holochain_conductor_api = { version = "=0.3.1" }
holochain_types = { version = "=0.3.1" }
holochain_p2p = { version = "=0.3.1" }
holochain_state = { version = "=0.3.1" }
kitsune_p2p_types = { version = "=0.3.1" }

[profile.dev]
debug = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true # link time optimization

# Optimize deps even in Dev
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
