[package]
name = "snapmail_common"
version = "0.0.4"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2018"

[dependencies]
yazi = "0.1.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "3.0.1"
anyhow = "1.0"
ansi_term = "0.12"
lazy_static = "1.4.0"
thiserror = "1.0.24"
serde_yaml = "0.8"
url2 = "0.0.6"
base64 = "0.13"
snapmail = { path = "../../../snapmail-rsm/zomes/snapmail" }

holochain_util = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_util", default-features = false }
holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holo_hash", default-features = false  }
holochain_keystore = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_keystore", default-features = false }
holochain = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain", default-features = false }
holochain_zome_types = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_zome_types", default-features = false }
holochain_conductor_api = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_conductor_api", default-features = false }
holochain_types = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_types", default-features = false }
holochain_p2p = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_p2p", default-features = false }

[target.armv7-unknown-linux-gnueabihf.dependencies]
# Added due to dependency problems when cross-compiling for RPi
openssl = { version = "0.10.32", features = ["vendored"] }


[target.aarch64-linux-android.dependencies]
# Added due to dependency problems when cross-compiling for RPi
openssl = { version = "0.10.32", features = ["vendored"] }