[package]
name = "snapmail_common"
version = "0.0.4"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2018"

[dependencies]
yazi = "0.1.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "3.0.1"
anyhow = "1.0"
ansi_term = "0.12"
lazy_static = "1.4.0"
thiserror = "1.0.24"
serde_yaml = "0.8"
url2 = "0.0.6"
base64 = "0.13"
snapmail = { path = "../../../snapmail-rsm/zomes/snapmail" }

# online
holochain_util = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain_util"}
holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holo_hash" }
holochain_keystore = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain_keystore" }
holochain = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain" }
holochain_zome_types = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain_zome_types" }
holochain_conductor_api = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain_conductor_api" }
holochain_types = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain_types" }
holochain_p2p = { git = "https://github.com/holochain/holochain.git", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "holochain_p2p" }

# local
#holochain_util = { path = "../../../holochain-develop/crates/holochain_util" }
#holo_hash = { path = "../../../holochain-develop/crates/holo_hash" }
#holochain_keystore = { path = "../../../holochain-develop/crates/holochain_keystore" }
#holochain = { path = "../../../holochain-develop/crates/holochain" }
#holochain_zome_types = { path = "../../../holochain-develop/crates/holochain_zome_types"  }
#holochain_conductor_api = { path = "../../../holochain-develop/crates/holochain_conductor_api" }
#holochain_types = { path = "../../../holochain-develop/crates/holochain_types" }
#holochain_p2p = { path = "../../../holochain-develop/crates/holochain_p2p" }

[target.armv7-unknown-linux-gnueabihf.dependencies]
# Added due to dependency problems when cross-compiling for RPi
openssl = { version = "0.10.32", features = ["vendored"] }
