[package]
name = "snapmail_common"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
yazi = "0.1.3"
serde_json = "1.0"
chrono.workspace = true
directories = "3.0.1"
anyhow.workspace = true

ansi_term = "0.12"
lazy_static = "1.4.0"
thiserror = "1.0.24"
serde_yaml = "0.9"
url2 = "0.0.6"
base64 = "0.13"
snapmail = { path = "../../../snapmail-rsm/zomes/snapmail" }

holochain.workspace = true
holochain_util.workspace = true
holo_hash.workspace = true
holochain_keystore.workspace = true
holochain_zome_types.workspace = true
holochain_conductor_api.workspace = true
holochain_types.workspace = true
holochain_p2p.workspace = true


[target.armv7-unknown-linux-gnueabihf.dependencies]
# Added due to dependency problems when cross-compiling for RPi
openssl = { version = "0.10.32", features = ["vendored"] }
