[package]
name = "rustify_wasm"
version = "0.0.1"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2018"

[[bin]]
name = "rustify-wasm"
path = "src/main.rs"

[dependencies]
yazi = "0.1.3"
anyhow = "1.0"
base64 = "0.13"
tokio = { version = "1.8.1", features = [ "full" ] }

# 385 deps wtf
holochain_types = { git = "https://github.com/holochain/holochain.git", rev = "1767dfc2d73ed107ac20dddc3fa56e46856c45cd", package = "holochain_types" }
# 550 deps wtf
#holochain_types = { path = "../../../holochain-develop/crates/holochain_types" }