[package]
name = "rustify_wasm"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "rustify-wasm"
path = "src/main.rs"

[dependencies]
yazi = "0.1.3"
anyhow.workspace = true
base64 = "0.13"
tokio.workspace = true

holochain_types.workspace = true