[package]
name = "snapmail_cli"
version = "0.0.1"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2018"

[[bin]]
name = "snapmail-cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ansi_term = "0.12"
lazy_static = "1.4.0"
observability = "0.1.3"
structopt = "0.3"
url2 = "0.0.6"
regex = "1"
tokio = { version = "1.5", features = [ "full" ] }
tokio-stream = { version = "0.1.5" }
futures-util = "0.3.1"
snapmail_common = { path = "../common" }

snapmail = { path = "../../../snapmail-rsm/zomes/snapmail" }

holochain = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain" }
holochain_types = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_types" }
holochain_p2p = { git = "https://github.com/holochain/holochain.git", rev = "cfbcc6a310a4f7dfc35f27c304808d165f602e7a", package = "holochain_p2p" }
