[package]
name = "snapmail_cli"
version = "0.0.1"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2018"

[[bin]]
name = "snapmail-cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ansi_term = "0.12"
lazy_static = "1.4.0"
observability = "0.1.3"
structopt = "0.3"
url2 = "0.0.6"
regex = "1"
tokio = { version = "1.5", features = [ "full" ] }
tokio-stream = { version = "0.1.5" }
futures-util = "0.3.1"
snapmail_common = { path = "../common" }

snapmail = { path = "../../../snapmail-rsm/zomes/snapmail" }

# online
holochain = { git = "https://github.com/holochain/holochain.git", rev = "1767dfc2d73ed107ac20dddc3fa56e46856c45cd", package = "holochain" }
holochain_types = { git = "https://github.com/holochain/holochain.git", rev = "1767dfc2d73ed107ac20dddc3fa56e46856c45cd", package = "holochain_types" }
holochain_p2p = { git = "https://github.com/holochain/holochain.git", rev = "1767dfc2d73ed107ac20dddc3fa56e46856c45cd", package = "holochain_p2p" }

# local
#holochain = { path = "../../../holochain-develop/crates/holochain" }
#holochain_types = { path = "../../../holochain-develop/crates/holochain_types" }
#holochain_p2p = { path = "../../../holochain-develop/crates/holochain_p2p" }