[package]
name = "snapmail_cli"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "snapmail-cli"
path = "src/main.rs"

[dependencies]
#chrono = { version = "0.4", features = ["serde"] }
#chrono.workspace = true

anyhow.workspace = true
strum.workspace = true

ansi_term = "0.12"
lazy_static = "1.4.0"
observability = "0.1.3"
structopt = "0.3"
url2 = "0.0.6"
regex = "1"
tokio.workspace = true
tokio-stream = { version = "0.1" }
futures-util = "0.3.1"
colored = "2.0.0"

snapmail_common = { path = "../common" }
snapmail = { path = "../../../snapmail-rsm/zomes/snapmail" }

holochain.workspace = true
holochain_types.workspace = true
holochain_p2p.workspace = true
holochain_zome_types.workspace = true
holochain_state.workspace = true
