[package]
name = "snapmail_tui"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "snapmail-tui"
path = "src/main-tui.rs"

[dependencies]
anyhow.workspace = true
strum.workspace = true
strum_macros.workspace = true
#chrono = { version = "0.4", features = ["serde"] }
chrono.workspace = true

crossterm = { version = "0.19", features = [ "serde" ] }


tui = { version = "0.15", default-features = false, features = ['crossterm', 'serde'] }

tokio.workspace = true
tokio-stream = { version = "0.1" }
futures-util = "0.3.1"

snapmail_common = { path = "../common" }
snapmail = { path = "../../../snapmail-rsm/zomes/snapmail" }

holochain.workspace = true
holochain_types.workspace = true
